Fixed horizontal scroll
set the height of h1 and form to 15vh each instead of 20vh making total of 15+15+70 = 100vh

--- a/ToDo App/style.css
+++ b/ToDo App/style.css
@@ -15,7 +15,7 @@ h1{
 }
 
 h1,form{
-  min-height: 20vh;
+  min-height: 15vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -47,6 +47,7 @@ form button:hover{
 }
 
 .todo-list{
+  padding-top: 50px;
   margin-left: auto;
   margin-right: auto;
   height: 70vh;
@@ -55,7 +56,7 @@ form button:hover{
 
 .list-obj{
   margin-bottom: 15px;
-  height: 8vh;
+  height: 7vh;
   width: 100%;
   display: flex;
 }
